--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ script:
   - chmod 400 UbuntuKey.pem
   - ssh-keyscan -H ec2-18-224-25-233.us-east-2.compute.amazonaws.com >> ~/.ssh/known_hosts
   - ssh-keyscan -H 18.224.25.233 >> ~/.ssh/known_hosts
-  - scp -i UbuntuKey.pem target/*.war ubuntu@ec2-18-224-25-233.us-east-2.compute.amazonaws.com:/tmp
+  - ssh -i UbuntuKey.pem ubuntu@ec2-18-224-25-233.us-east-2.compute.amazonaws.com "rm -rf /var/lib/tomcat8/webapps/Netflix*"
+  - scp -i UbuntuKey.pem target/Netflix-1.0-SNAPSHOT.war ubuntu@ec2-18-224-25-233.us-east-2.compute.amazonaws.com:/var/lib/tomcat8/webapps
